--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,105 @@
-img, svg {
+img,
+svg {
   vertical-align: baseline !important;
+}
+@font-face {
+  font-family: "Comicon";
+  src: url(../public/assets/css/fonts/Comicon.otf);
+}
+
+@font-face {
+  font-family: "Comicon";
+  src: url(../public/assets/css/fonts/Comicon-Bold.otf);
+  font-weight: bold;
+}
+
+.navbar {
+  /* padding-top: 1.8rem;
+  padding-bottom: 1.8rem; */
+  background-color: rgba(255, 255, 255, 0.8) !important;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+.navbar-brand {
+  max-width: 192px;
+}
+
+.navbar-toggler {
+  background-color: wheat;
+}
+
+.navbar-nav .nav-item:not(:last-child) {
+  margin-right: 2rem;
+}
+
+.nav-item {
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+
+.nav-link {
+  color: #000 !important;
+}
+
+.nav-link:hover {
+  color: #fc792f !important;
+}
+
+.nav-link.active {
+  color: #fc792f !important;
+  font-weight: 500;
+}
+
+.mint-page {
+  height: 100vh;
+  max-height: 100vh;
+  background-image: url(../public/assets/images/bg_mint_v3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: center;
+  padding: 14rem 0 10rem;
+}
+
+.mint-page__ttl {
+  width: 50%;
+}
+
+.mint-page__ttl img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.mint-v3_chose {
+  font-size: 1rem;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.mint-v3_chose .noti {
+  display: block;
+  font-family: "Comicon", sans-serif;
+  font-size: 2rem;
+}
+
+.btn-mint {
+  background-color: #fc792f;
+  color: white;
+  font-weight: 700;
+  font-size: 1.2rem;
+  padding: 10px 0;
+  width: 18rem;
+  border-radius: 30px;
+}
+
+.mint-box {
+  margin-top: 100px;
+}
+
+.inventory-page {
+  padding: 5rem 0;
 }
